add the forwarding.sh to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-miproject
+miproject/
 self_reading.py
-text.text
+text.txt
 trainer.py
 vgg19_train.txt
 Dockerfile
 monitor.py
 program_runner.py
-report_images
-images
+report_images/
+images/
 checker.py
 info.txt
-matched_images
-train_data
-val_data
-data
+matched_images/
+train_data/
+val_data/
+data/
 annotations.json
-vgg16
-vgg19
+vgg16/
+vgg19/
 forwarding.sh
